[gd_scene load_steps=10 format=2]

[ext_resource path="res://Magie/spell_mass_shield.gd" type="Script" id=1]
[ext_resource path="res://Graphics/interface/Arrow/Arrow_line.png" type="Texture" id=2]
[ext_resource path="res://Graphics/magie/Spell_shield/shield_castingCopy_Frame1.png" type="Texture" id=3]
[ext_resource path="res://Graphics/interface/Arrow/arrow_end.png" type="Texture" id=4]
[ext_resource path="res://Graphics/magie/Spell_shield/shield_castingFrame1.png" type="Texture" id=5]
[ext_resource path="res://Graphics/interface/card_magic/Shield/ZONE.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 150.417
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 150.004

[node name="spell_mass_shield" type="AnimatedSprite"]
z_index = 6
frames = SubResource( 1 )
playing = true
script = ExtResource( 1 )

[node name="arrow_line" type="Line2D" parent="."]
scale = Vector2( 1.5, 1.5 )
points = PoolVector2Array( 0, 0, -51.3333, 0 )
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="arrow_end" type="Sprite" parent="."]
position = Vector2( -80, 0 )
scale = Vector2( 1.2, 0.8 )
texture = ExtResource( 4 )

[node name="spell_shield_hitbox" type="Area2D" parent="arrow_end"]
position = Vector2( 80, 0 )
collision_layer = 15
collision_mask = 15

[node name="hitbox" type="CollisionShape2D" parent="arrow_end/spell_shield_hitbox"]
position = Vector2( -84.5, 0 )
scale = Vector2( 0.8, 1.2 )
shape = SubResource( 2 )

[node name="Zone" type="Sprite" parent="arrow_end/spell_shield_hitbox"]
modulate = Color( 1, 1, 1, 0.392157 )
show_behind_parent = true
position = Vector2( -84.1667, 1.25 )
scale = Vector2( 3.64398, 5.46597 )
z_index = -1
texture = ExtResource( 6 )

[node name="hitbox_click" type="Area2D" parent="arrow_end"]
position = Vector2( 80, 0 )

[node name="hitbox_click" type="CollisionShape2D" parent="arrow_end/hitbox_click"]
position = Vector2( -84.5, 0 )
scale = Vector2( 0.8, 1.2 )
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="arrow_end/spell_shield_hitbox" to="." method="_on_spell_shield_hitbox_body_entered"]
[connection signal="body_exited" from="arrow_end/spell_shield_hitbox" to="." method="_on_spell_shield_hitbox_body_exited"]
[connection signal="body_entered" from="arrow_end/hitbox_click" to="." method="_on_hitbox_click_body_entered"]
